cabal-version:      2.4
name:               advent-of-code2021
version:            0.1.0.0
author:             Paolo
maintainer:         mrtnpaolo@protonmail.com
license:            ISC
license-file:       LICENSE
copyright:          2021 Paolo Martini <mrtnpaolo@protonmail.com>

library
    exposed-modules:    Advent,
                        Advent.Coord,
                        Advent.Input,
                        Advent.Search
    other-modules:      Advent.Deque
    build-depends:      base,
                        array,
                        containers
    hs-source-dirs:     common
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost,
                        PatternSynonyms,
                        ViewPatterns

executable Day00
    main-is:            Day00.hs
    build-depends:      base,
                        advent-of-code2021
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost,
                        TypeApplications,
                        ViewPatterns
