cabal-version:      2.4
name:               advent-of-code2021
version:            0.1.0.0
author:             Paolo
maintainer:         mrtnpaolo@protonmail.com
license:            ISC
license-file:       LICENSE
copyright:          2021 Paolo Martini <mrtnpaolo@protonmail.com>
homepage:           https://github.com/mrtnpaolo/advent-of-code-2021
data-files:         inputs/*.txt

library
    exposed-modules:    Advent,
                        Advent.Coord,
                        Advent.Input,
                        Advent.Search,
                        Advent.Chinese,
                        Advent.List
    other-modules:      Advent.Deque,
                        Advent.PQueue
    build-depends:      base,
                        array,
                        containers
    hs-source-dirs:     common
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost,
                        PatternSynonyms,
                        ViewPatterns

executable Day01
    main-is:            Day01.hs
    build-depends:      base,
                        advent-of-code2021
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: TypeApplications

executable Day02
    main-is:            Day02.hs
    build-depends:      base,
                        advent-of-code2021
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns

executable Day03
    main-is:            Day03.hs
    build-depends:      base,
                        advent-of-code2021
    hs-source-dirs:     execs
    default-language:   Haskell2010

executable Day04
    main-is:            Day04.hs
    build-depends:      base,
                        advent-of-code2021,
                        containers,
                        array
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost,
                        TypeApplications,
                        ViewPatterns
