cabal-version:      2.4
name:               advent-of-code2021
version:            0.1.0.0
author:             Paolo
maintainer:         mrtnpaolo@protonmail.com
license:            ISC
license-file:       LICENSE
copyright:          2021 Paolo Martini <mrtnpaolo@protonmail.com>
homepage:           https://github.com/mrtnpaolo/advent-of-code-2021
data-files:         inputs/*.txt

library
    exposed-modules:    Advent,
                        Advent.Coord,
                        Advent.Input,
                        Advent.Search,
                        Advent.Chinese,
                        Advent.List
    other-modules:      Advent.Deque,
                        Advent.PQueue
    build-depends:      base,
                        array,
                        containers
    hs-source-dirs:     common
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost,
                        PatternSynonyms,
                        ViewPatterns

executable Template
    main-is:            Template.hs
    build-depends:      base,
                        advent-of-code2021,
                        containers,
                        array
    hs-source-dirs:     .
    default-language:   Haskell2010
    default-extensions: PartialTypeSignatures
                        ImportQualifiedPost
                        TypeApplications
                        PatternSynonyms
                        ViewPatterns
                        BlockArguments
                        LambdaCase
                        RecordWildCards
                        ParallelListComp

executable Day01
    main-is:            Day01.hs
    build-depends:      base,
                        advent-of-code2021
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: TypeApplications

executable Day02
    main-is:            Day02.hs
    build-depends:      base,
                        advent-of-code2021
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns

executable Day03
    main-is:            Day03.hs
    build-depends:      base,
                        advent-of-code2021
    hs-source-dirs:     execs
    default-language:   Haskell2010

executable Day04
    main-is:            Day04.hs
    build-depends:      base,
                        advent-of-code2021,
                        containers,
                        array
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost,
                        TypeApplications,
                        ViewPatterns

executable Day05
    main-is:            Day05.hs
    build-depends:      base,
                        advent-of-code2021,
                        containers
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
                        TypeApplications

executable Day06
    main-is:            Day06.hs
    build-depends:      base,
                        advent-of-code2021,
                        containers,
                        array
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
                        TypeApplications
                        ViewPatterns

executable Day07
    main-is:            Day07.hs
    build-depends:      base,
                        advent-of-code2021
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: TypeApplications

executable Day08
    main-is:            Day08.hs
    build-depends:      base,
                        advent-of-code2021
    hs-source-dirs:     execs
    default-language:   Haskell2010

executable Day09
    main-is:            Day09.hs
    build-depends:      base,
                        advent-of-code2021,
                        array
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
                        TypeApplications

executable Day10
    main-is:            Day10.hs
    build-depends:      base,
                        advent-of-code2021
    hs-source-dirs:     execs
    default-language:   Haskell2010

executable Day11
    main-is:            Day11.hs
    build-depends:      base,
                        advent-of-code2021,
                        containers
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
                        TypeApplications

executable Day12
    main-is:            Day12.hs
    build-depends:      base,
                        advent-of-code2021,
                        containers,
                        array
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
                        BlockArguments
                        LambdaCase

executable Day13
    main-is:            Day13.hs
    build-depends:      base,
                        advent-of-code2021,
                        containers,
                        array
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
                        BlockArguments
                        LambdaCase
                        ViewPatterns

executable Day14
    main-is:            Day14.hs
    build-depends:      base,
                        advent-of-code2021,
                        containers,
                        array
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
                        BlockArguments
                        LambdaCase

executable Day15
    main-is:            Day15.hs
    build-depends:      base
                      , advent-of-code2021
                      , array
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost

executable Day16
    main-is:            Day16.hs
    build-depends:      base,
                        advent-of-code2021
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost

executable Day17
    main-is:            Day17.hs
    build-depends:      base,
                        advent-of-code2021,
                        containers,
                        array
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
                        ViewPatterns
                        BlockArguments
                        LambdaCase

executable Day18
    main-is:            Day18.hs
    build-depends:      base,
                        advent-of-code2021,
                        containers,
                        array
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
                        TypeApplications
